Object works, now condense

--- a/index.html
+++ b/index.html
@@ -12,15 +12,26 @@
 <body>
 <nav class="navbar navbar-inverse dark-bar" role="navigation"><h2><strong>Exercism.io Answers<strong></h2></nav>
 
-<div style="margin-bottom: 672px;" class="container buffer-top">
-	<div class="row">
+<div class="container">
+	<div class="row buffer-top">
 		<div class="col-md-8 col-centered dark-block">
 			<div style="margin: 3%;">
 				<h3 style="margin-bottom: 3%">Hello World Exercise</h3>
-				<button class="btn btn-success" id="hello-world-button">Excecute Code</button>
+				<button class="btn btn-success" id="hello-world-button">Execute Code</button>
 				<code id="hello-world-code">//Code goes in here</code>
 				<code class="code-console" id="hello-world-output">Console like</code>
 				<div id="hello-world-prompt"></div>
+			</div>
+		</div>
+	</div>
+	<div class="row buffer-top">
+		<div class="col-md-8 col-centered dark-block">
+			<div style="margin: 3%;">
+				<h3 style="margin-bottom: 3%">Leap Exercise</h3>
+				<button class="btn btn-success" id="leap-year-button">Execute Code</button>
+				<code id="leap-year-code">//Code goes in here</code>
+				<code class="code-console" id="leap-year-output">Console like</code>
+				<div id="leap-year-prompt"></div>
 			</div>
 		</div>
 	</div>
