Temp push to heroku

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-inverse dark-bar" role="navigation"><h2><strong>Exercism.io Answers<strong></h2></nav>
 
 <div class="container">
-	<div class="row buffer-top">
+	<!-- <div class="row buffer-top">
 		<div class="col-md-8 col-centered dark-block">
 			<div style="margin: 3%;">
 				<h3 style="margin-bottom: 3%">Hello World Exercise</h3>
@@ -34,7 +34,7 @@
 				<div id="leap-year-prompt"></div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 </div>
 
 <footer>
