--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title></title>
 	<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 	<script type="text/javascript" src="assets/js/scripts.js"></script>
@@ -16,6 +16,7 @@
 	<!-- <div class="row buffer-top">
 		<div class="col-md-8 col-centered dark-block">
 			<div style="margin: 3%;">
+				<span class="btn-control" id="x-control">X</span><span class="btn-control" id="-control">-</span>
 				<h3 style="margin-bottom: 3%">Hello World Exercise</h3>
 				<button class="btn btn-success" id="hello-world-button">Execute Code</button>
 				<code id="hello-world-code">//Code goes in here</code>
