About page links are working

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 	<script type="text/javascript" src="assets/js/scripts.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-inverse dark-bar" role="navigation"><h2><strong>Exercism.io Answers<strong></h2></nav>
+<nav class="navbar navbar-inverse dark-bar" role="navigation">
+	<h2 class="nav-bar-left">Exercism.io Answers</h2>
+	<div style="margin-left: auto">
+		<h3 class="nav-bar-right" id="about-page">About</h3>
+		<h3 class="nav-bar-right" id="exercise-page">Exercises</h3>
+	</div>
+</nav>
 
 <div class="container">
 	<!-- <div class="row buffer-top">
